# nn-colletion

blocker/: test.py  train.php  xor.net
bnet/1/: fetch.php  train.php  trained_100.net
bnet/2/: 100_1out.txt  fetch.php  test.php  tmp.bif.file.xml  train.php  trained_100.net
bnet/3/: 5K.txt  fetch.php  train.php  trained_100.net
bnet/4/: test.php
bnet/FannTool-1.2/: ReadMe.ENG
bnet/neuralview-1.5.0/: Config.lua  Globals.lua  MainApp.lua  Makefile  neuralview  neuralview.desktop  readme.md
cgminer1/: Makefile  Makefile.in  cgminer  config.h  config.h.in  config.status  configure  libtool
cgminer1/.deps/: cgminer-api.Po  cgminer-cgminer.Po  cgminer-driver-avalon.Po  cgminer-klist.Po  cgminer-logging.Po  cgminer-sha2.Po  cgminer-usbutils.Po  cgminer-util.Po
cgminer1/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
cgminer1/ccan/: Makefile  Makefile.in
cgminer1/compat/: Makefile  Makefile.in
cgminer1/lib/: Makefile  Makefile.in
cgminer1/testnet-box/: README.txt
compress1/: 100.txt  10K.txt  a.out  casc_train  casc_train.c  casc_train.results  casc_train10-1248  casc_train10-1248.c  casc_train10-1248.results  casc_train10-2496  casc_train10-2496.c  casc_train10-312  casc_train10-312.c  casc_train10-312.results  casc_train10-624  casc_train10-624.c  casc_train10-624.results  casc_train14  casc_train14.c  cascade_comp.net  cascade_comp.net.1liner  cascade_comp.net.full200neurons  cascade_comp10-1248.net  cascade_comp10-312.net  cascade_comp10-624.net  cascade_comp1000.net  cascade_comp14.net  cascade_comp2000.net  cascade_comp_1000-14-39_50.net  comp.net  comp_train  comp_train_casc  comp_train_casc200  comp_train_casc2000  comp_train_casc200double  comp_train_casc200neurons  comp_train_casc200neurons_simm  normal_test  normal_test.c  normal_train  (+20 more)
cperceptron1/: try.orig  try.php
deepcl/: cifar-to-mat  deepclexec  deepclrun  gpuinfo  mnist-to-floats  mnist-to-jpegs  mnist-to-pipe  prepare-norb  testgtestsupp
dopebot/dopewars-1.5.12/: Makefile  Makefile.in  acinclude.m4  config.h  config.h.in  config.status  configure  dopewars.spec  libtool  mkinstalldirs
fanncl1/: CMakeLists.txt  CMakeLists.txt~  doublefann.c  fann.c  fann_cascade.c  fann_train.c  fann_train_data.c  float_backprop_msep.cl  float_bpmseall.cl  float_mulsump.cl  float_summall.cl  float_summall_bc.cl  floatfann.c  gitpush.txt  inc.cl  simpleCL.c
fanncl1/include/: fann.h  fann_data.h  fann_internal.h  fann_train.h  simpleCL.h
mlp/: check-bad_test.rb  check-good.rb  check-good_test.rb  mlp.rb.1  mlp.rb.orig  out.txt  save_1vall.rb  save_mlp.rb  sstest.rb  test.sh.single  test.sh.single.test
mlp/bck/: load_mlp.rb  save_mlp.rb
mlp/bck2/: save_mlp.rb
mlp/bck3/: makedat.php  out.txt
mlp/nets/: 7  7vs1000  7vs1006  7vs1027  7vs1031  7vs1035  7vs1037  7vs108  7vs110  7vs111  7vs116  7vs124  7vs129  7vs134  7vs137  7vs142  7vs145  7vs149  7vs152  7vs156  7vs159  7vs163  7vs168  7vs177  7vs187  7vs189  7vs190  7vs194  7vs204  7vs213  7vs216  7vs224  7vs229  7vs23  7vs232  7vs233  7vs234  7vs236  7vs237  7vs239  (+162 more)
mlp2/: 5K.txt  save_mlp.rb  saved.net
mlp2/old/: 1vall.txt  file.rb  load_mlp.good.rb  load_mlp.rb  (+3 more)
nnfbc55/: gui.db
pond/: a.out  nanopond  nanopond.c
(+434 files in other folders)
